--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <header>
     <div class="container">
       <img src="img/logo.svg" alt="logo">
+      <h3>Select you favorite news outlet.</h3>
       <div class="searchbox">
         <select id="sources"></select>
       </div>
